--- a/package.json
+++ b/package.json
@@ -3,18 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
+    "chakra-confirm": "^1.0.4",
+    "chakra-data-table": "^1.1.2",
+    "chakra-form": "^0.1.2",
+    "chakra-next-link": "^1.0.10",
+    "fast-csv": "^4.3.6",
+    "framer-motion": "^4",
+    "multer": "^1.4.2",
+    "multiparty": "^4.2.2",
     "next": "11.0.1",
+    "next-connect": "^0.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "6",
+    "react-select": "^4.3.1",
+    "zod": "^3.5.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.14",
     "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "typescript": "^4.3.5"
   }
 }
